// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trade ship scenarios > a thousand ports each, giant map 1`] = `
{
  "a": {
    "arrivalsPerMinute": 146.4,
    "goldPerMinute": 63040000,
    "shipsArrived": 1464,
    "shipsSent": 1508,
    "tradeGold": 630355101n,
  },
  "b": {
    "arrivalsPerMinute": 135.8,
    "goldPerMinute": 63040000,
    "shipsArrived": 1358,
    "shipsSent": 1461,
    "tradeGold": 630355101n,
  },
  "goldPerTrade": 223400,
}
`;

exports[`trade ship scenarios > across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 5.4,
    "goldPerMinute": 844300,
    "shipsArrived": 27,
    "shipsSent": 32,
    "tradeGold": 4221646n,
  },
  "b": {
    "arrivalsPerMinute": 6.2,
    "goldPerMinute": 844300,
    "shipsArrived": 31,
    "shipsSent": 37,
    "tradeGold": 4221646n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > across the ocean, level-3 port 1`] = `
{
  "a": {
    "arrivalsPerMinute": 16.6,
    "goldPerMinute": 1660000,
    "shipsArrived": 83,
    "shipsSent": 92,
    "tradeGold": 8297718n,
  },
  "b": {
    "arrivalsPerMinute": 6.2,
    "goldPerMinute": 1660000,
    "shipsArrived": 31,
    "shipsSent": 37,
    "tradeGold": 8297718n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > fifty ports each, long route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 81.3,
    "goldPerMinute": 24500000,
    "shipsArrived": 542,
    "shipsSent": 807,
    "tradeGold": 163319150n,
  },
  "b": {
    "arrivalsPerMinute": 85.2,
    "goldPerMinute": 24500000,
    "shipsArrived": 568,
    "shipsSent": 844,
    "tradeGold": 163319150n,
  },
  "goldPerTrade": 147100,
}
`;

exports[`trade ship scenarios > long haul 1`] = `
{
  "a": {
    "arrivalsPerMinute": 3.9,
    "goldPerMinute": 1222000,
    "shipsArrived": 26,
    "shipsSent": 44,
    "tradeGold": 8144743n,
  },
  "b": {
    "arrivalsPerMinute": 4.65,
    "goldPerMinute": 1222000,
    "shipsArrived": 31,
    "shipsSent": 48,
    "tradeGold": 8144743n,
  },
  "goldPerTrade": 142900,
}
`;

exports[`trade ship scenarios > short coastal hop 1`] = `
{
  "a": {
    "arrivalsPerMinute": 6,
    "goldPerMinute": 65420,
    "shipsArrived": 30,
    "shipsSent": 32,
    "tradeGold": 327095n,
  },
  "b": {
    "arrivalsPerMinute": 7,
    "goldPerMinute": 65420,
    "shipsArrived": 35,
    "shipsSent": 37,
    "tradeGold": 327095n,
  },
  "goldPerTrade": 5032,
}
`;

exports[`trade ship scenarios > ten ports each across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 52.2,
    "goldPerMinute": 9647000,
    "shipsArrived": 261,
    "shipsSent": 302,
    "tradeGold": 48232922n,
  },
  "b": {
    "arrivalsPerMinute": 51.6,
    "goldPerMinute": 9647000,
    "shipsArrived": 258,
    "shipsSent": 304,
    "tradeGold": 48232922n,
  },
  "goldPerTrade": 92930,
}
`;

exports[`trade ship scenarios > ten ports, ~500-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 48.6,
    "goldPerMinute": 9971000,
    "shipsArrived": 243,
    "shipsSent": 297,
    "tradeGold": 49852883n,
  },
  "b": {
    "arrivalsPerMinute": 47,
    "goldPerMinute": 9971000,
    "shipsArrived": 235,
    "shipsSent": 291,
    "tradeGold": 49852883n,
  },
  "goldPerTrade": 104300,
}
`;

exports[`trade ship scenarios > ten ports, ~1800-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 32.9,
    "goldPerMinute": 10920000,
    "shipsArrived": 329,
    "shipsSent": 465,
    "tradeGold": 109157150n,
  },
  "b": {
    "arrivalsPerMinute": 32,
    "goldPerMinute": 10920000,
    "shipsArrived": 320,
    "shipsSent": 455,
    "tradeGold": 109157150n,
  },
  "goldPerTrade": 168200,
}
`;

exports[`train scenarios > external city in the cluster 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 495000n,
  "aGoldPerMinute": 99000,
  "aSelfTradeGold": 495000n,
  "bExternalTradeGold": 325000n,
  "bGoldDelta": 325000n,
  "trainUnitsSeen": 210,
}
`;

exports[`train scenarios > factory and four cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 280000n,
  "aGoldPerMinute": 56000,
  "aSelfTradeGold": 280000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 196,
}
`;

exports[`train scenarios > factory and one city 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 300000n,
  "aGoldPerMinute": 60000,
  "aSelfTradeGold": 300000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 210,
}
`;

exports[`train scenarios > two factories and two cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 380000n,
  "aGoldPerMinute": 76000,
  "aSelfTradeGold": 380000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 378,
}
`;
